--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "fastify": "^4.21.0",
-    "handlebars": "^4.7.8",
+    "express": "^4.17.1",
+    "airtable": "^0.11.1",
   },
   "engines": {
     "node": "14.x"
