--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "airtable": "^0.11.1",
+    "airtable": "^0.11.1"
   },
   "engines": {
     "node": "14.x"
