--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "airtable": "^0.11.1"
+    "airtable": "^0.11.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2"
   },
   "engines": {
     "node": "14.x"
